--- a/1/Web projekt Selmin & Ereza/Code Snippets/Login Form/login.html
+++ b/1/Web projekt Selmin & Ereza/Code Snippets/Login Form/login.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Document</title>
-    <link rel="stylesheet" href="loginstyle.css">
+    <style>
+        .loginForm{
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items:center;
+    border: 1px solid black;
+    border-radius: 15px;
+    width:500px;
+    margin:0 auto;
+    padding:40px;
+}
+
+h1,p,label{
+    font-family:Century Gothic;
+}
+
+#emailID{
+    width: 350px;
+    height:40px;
+    border-radius: 5px;
+    border: 0.5px solid black;
+    font-size: 20px;
+}
+
+#passwordID{
+    width: 350px;
+    height:40px;
+    border-radius: 5px;
+    border: 0.5px solid black;
+    font-size: 20px;
+
+}
+
+#loginButton{
+    width: 360px;
+    height:40px;
+    border-radius: 5px;
+    border: 0.5px solid black;
+    background-color:rgb(105, 243, 167);
+    font-size: 20px;
+    cursor: pointer;
+}
+    </style>
 </head>
 <body>
     <div class="loginForm">
