--- a/1/Web projekt Selmin & Ereza/Website Selmin Ereza/html/register.html
+++ b/1/Web projekt Selmin & Ereza/Website Selmin Ereza/html/register.html
@@ -55,7 +55,7 @@
                <input type="password" id="password" >
            </div><br>
 
-        <input type="submit" value="Login" class="btn" id="loginButton">
+        <input type="submit" value="Register" class="btn" id="loginButton">
         <br>
             <p id="no-acc-button">Already have an account? <a href="..\html\login.html">Sign in.</a></p>
         </form>
